# recque

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  manifest  pyproject.toml  recque.py  recque_web.py  requirements.txt
.beads/: issues.jsonl  metadata.json
.runtime/: session_id
legacy/: recque.py
legacy/templates/: index.html  quiz.html
recque_tui/: config.py  main.py
recque_tui/application/: __init__.py  session_service.py
recque_tui/core/: ai_client.py  learning_stack.py  mock_generator.py  models.py  question_engine.py  session.py
recque_tui/database/: repositories.py  schema.py
recque_tui/database/migrations/: init_db.py
recque_tui/domain/: __init__.py  analytics.py  journey.py  knowledge_graph.py
recque_tui/ui/: app.py
recque_tui/ui/screens/: __init__.py  home_screen.py  journey_screen.py  progress_screen.py  question_screen.py  session_picker.py
recque_tui/ui/styles/: theme.tcss
recque_tui/ui/widgets/: progress_map.py
recque_web/: app.py  main.py
recque_web/static/: style.css
recque_web/templates/: base.html  complete.html  home.html  progress.html  quiz.html
recque_web/templates/partials/: question_card.html  question_pop.html  question_push.html  skill_complete.html
tests/: __init__.py  conftest.py  test_ai_client_claude_cli.py  test_database.py  test_domain.py  test_learning_stack.py  test_mock_generator.py  test_models.py  test_question_screen.py  test_repositories.py  test_session.py  test_session_service.py
