[project]
name = "recque"
version = "0.1.0"
description = "RecQue - Recursive Questioning for adaptive learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ric Glassey" }
]
keywords = ["learning", "education", "tui", "ai", "questions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "pydantic>=2.5.0",
    "openai>=1.3.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "textual>=0.47.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
recque = "recque_tui.main:main"
recque-web = "recque_web.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recque_tui", "recque_web"]

[tool.ruff]
line-length = 100
target-version = "py311"
# legacy/ holds preserved pre-TUI prototypes — kept as-is, not linted.
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
